compiler/testData/diagnostics/tests/inlineClasses/inlineClassDeprecated.kt
// FIR_IDENTICAL
// LANGUAGE: +JvmInlineValueClasses

<!INLINE_CLASS_DEPRECATED!>inline<!> class IC(val i: Int)
